<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDF1E6">

    <!-- Konten scrollable -->
    <ScrollView
        android:id="@+id/scrollViewContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/custom_nav_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <!-- PROFILE DAN GREETING -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/strawberry_profile" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="114dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="12dp"
                        android:src="@drawable/Hello" />
                </LinearLayout>

                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="1dp" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/home_nav_item" />
            </LinearLayout>

            <!-- CARD EDUKASI -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:background="@drawable/home_rich_tooltip_blank"
                android:backgroundTint="#B75E57"
                android:clipToPadding="false"
                android:elevation="6dp"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="179dp"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_know"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewFact"
                    android:layout_width="284dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/random_fact"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnShowFact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/show_fact_button"
                    android:textSize="12sp"
                    android:textColor="#FDF1E6"
                    android:background="@drawable/bg_more_button"
                    android:padding="8dp"/>
            </LinearLayout>

            <!-- TIPS BOX -->
            <LinearLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="24dp"
                android:background="@drawable/home_rectangle_8"
                android:backgroundTint="#7C9D56"
                android:clipToPadding="false"
                android:elevation="6dp"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/TipsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/tips"
                    android:textColor="#FDF1E6"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <!-- Tip 1 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTipNumber1"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/bg_circle"
                        android:gravity="center"
                        android:text="1"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="1dp"
                        android:background="@drawable/bg_circle"
                        android:padding="10dp"
                        android:src="@drawable/home_camera" />

                    <TextView
                        android:layout_width="128dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/camera_tips"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />
                </LinearLayout>

                <!-- Tip 2 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTipNumber2"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/bg_circle"
                        android:gravity="center"
                        android:text="2"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="1dp"
                        android:background="@drawable/bg_circle"
                        android:padding="10dp"
                        android:src="@drawable/home_upload_icon" />

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/upload_tips"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/custom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_alignParentBottom="true"
        android:padding="0dp"
        android:background="@drawable/home_bottom_menu">

    <!-- Layer ikon di atas background -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom|center_vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/nav_info"
            android:layout_width="0dp"
            android:layout_height="95dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/home_more" />

        <ImageButton
            android:id="@+id/nav_scan"
            android:layout_width="0dp"
            android:layout_height="93dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/home_scan" />

        <ImageButton
            android:id="@+id/nav_upload"
            android:layout_width="0dp"
            android:layout_height="91dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/home_upload" />

    </LinearLayout>
</FrameLayout>
    </RelativeLayout>
